--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <title></title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<script src="js/Three.js"></script>
-	<script src="js/Stats.js"></script>
+	<script type="text/javascript" src="js/Three.js"></script>
+	<script type="text/javascript" src="js/Stats.js"></script>
 	<script type="text/javascript" src="js/tetris.js"></script>
+	<script type="text/javascript" src="js/tetris.block.js"></script>	
 	</head>
   <body onload="Tetris.start()">
   </body>
