collisions and points

--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
   <head>
     <title></title>
+	<style>
+		body {margin: 0; padding: 0; overflow: hidden;}
+	</style>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<script type="text/javascript" src="js/Three.js"></script>
 	<script type="text/javascript" src="js/Stats.js"></script>
 	<script type="text/javascript" src="js/tetris.js"></script>
 	<script type="text/javascript" src="js/tetris.block.js"></script>	
+	<script type="text/javascript" src="js/tetris.board.js"></script>	
 	</head>
   <body onload="Tetris.start()">
   </body>
