--- a/index.html
+++ b/index.html
@@ -4,6 +4,62 @@
     <title></title>
 	<style>
 		body {margin: 0; padding: 0; overflow: hidden;}
+		
+		#menu {
+			position: absolute;
+			width: 200px;
+			height: 150px;
+			
+			top: 50%; left: 50%;
+			margin: -75px 0 0 -100px;
+			
+			text-align: center;
+			
+			border: 3px solid #fff;
+			border-radius: 15px;
+			
+			background-color: #E36B23;
+			box-shadow: 2px 10px 5px #888;
+		}
+		
+		#menu button {
+			width: 80px;
+			height: 25px;
+			
+			background-color: #C44032;
+			
+			border: 3px solid #fff;
+			border-radius: 5px;	
+
+			font-size: 14px;
+			font-weight: bold;
+			color: #fff;			
+		}
+		
+		#points {
+			position: absolute;
+			width: 120px;
+			height: 16px;	
+
+			padding: 12px;
+			
+			top: 20px;
+			right: 80px;
+			
+			border: 3px solid #fff;
+			border-radius: 15px;
+			
+			background-color: #E36B23;
+			box-shadow: 2px 10px 5px #888;	
+
+			font-size: 14px;
+			font-weight: bold;
+			color: #fff;	
+
+			text-align: right;
+			
+			display: none;
+		}
 	</style>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<script type="text/javascript" src="js/Three.js"></script>
@@ -11,7 +67,27 @@
 	<script type="text/javascript" src="js/tetris.js"></script>
 	<script type="text/javascript" src="js/tetris.block.js"></script>	
 	<script type="text/javascript" src="js/tetris.board.js"></script>	
+	
+	<script src="js/cufon-yui.js" type="text/javascript"></script>
+	<script src="js/Blox_400.font.js" type="text/javascript"></script>
 	</head>
-  <body onload="Tetris.start()">
+  <body onload="Tetris.init()">
+	<div id="menu">
+		<h1>Three.js Tetris</h1>
+		<button id="play_button">Play</button>
+	</div>
+  
+	<div id="points">
+		0
+	</div>
+  
+	<audio id="audio_theme" src="tetris.mp3" preload="auto"></audio>
+	<audio id="audio_move" src="move.mp3" preload="auto"></audio>
+	<audio id="audio_collision" src="collision.mp3" preload="auto"></audio>
+	<audio id="audio_gameover" src="gameover.mp3" preload="auto"></audio>
+	<script type="text/javascript">
+		Cufon.replace('#menu h1');
+		Cufon.replace('#points');
+	</script>	
   </body>
 </html>
