--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<h1>Three.js Tetris</h1>
     <p>
       Movement: arrows<br>
-      Rotation: AW/SD/QE<br>
+      Rotation: AD/SW/QE<br>
       Author: <a href="http://www.smashinglabs.pl">smashinglabs.pl</a>
     </p>
 		<button id="play_button">Play</button>
