--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	</head>
   <body onload="Tetris.init()">
+    <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-17195095-1']);
+    _gaq.push(['_trackPageview']);
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script>
+
 	<div id="menu">
 		<h1>Three.js Tetris</h1>
     <p>
