--- a/index.html
+++ b/index.html
@@ -1,115 +1,104 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title></title>
-	<style>
-		body {margin: 0; padding: 0; overflow: hidden;}
-		
-		#menu {
-			position: absolute;
-			width: 200px;
-			height: 250px;
-			
-			top: 50%; left: 50%;
-			margin: -125px 0 0 -100px;
-			
-			text-align: center;
-			
-			border: 3px solid #fff;
-			border-radius: 15px;
-			
-			background-color: #E36B23;
-			box-shadow: 2px 10px 5px #888;
-		}
-		
-    #menu p {font-weight: bold; color: #fff;}
-    #menu p a {color: #fff;}
+    <head>
+        <title>Three.js Tetris</title>
+        <style>
+            body {margin: 0; padding: 0; overflow: hidden;}
 
-		#menu button {
-			width: 80px;
-			height: 25px;
-			
-			background-color: #C44032;
-			
-			border: 3px solid #fff;
-			border-radius: 5px;	
+            #menu {
+                position: absolute;
+                width: 200px;
+                height: 250px;
 
-			font-size: 14px;
-			font-weight: bold;
-			color: #fff;			
-		}
-		
-		#points {
-			position: absolute;
-			width: 120px;
-			height: 16px;	
+                top: 50%; left: 50%;
+                margin: -125px 0 0 -100px;
 
-			padding: 12px;
-			
-			top: 20px;
-			right: 80px;
-			
-			border: 3px solid #fff;
-			border-radius: 15px;
-			
-			background-color: #E36B23;
-			box-shadow: 2px 10px 5px #888;	
+                text-align: center;
 
-			font-size: 14px;
-			font-weight: bold;
-			color: #fff;	
+                border: 3px solid #fff;
+                border-radius: 15px;
 
-			text-align: right;
-			
-			display: none;
-		}
-	</style>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+                background-color: #E36B23;
+                box-shadow: 2px 10px 5px #888;
+            }
+
+            #menu p {font-weight: bold; color: #fff;}
+            #menu p a {color: #fff;}
+
+            #menu button {
+                width: 80px;
+                height: 25px;
+
+                background-color: #C44032;
+
+                border: 3px solid #fff;
+                border-radius: 5px;
+
+                font-size: 14px;
+                font-weight: bold;
+                color: #fff;
+            }
+
+            #points {
+                position: absolute;
+                width: 120px;
+                height: 16px;
+
+                padding: 12px;
+
+                top: 20px;
+                right: 80px;
+
+                border: 3px solid #fff;
+                border-radius: 15px;
+
+                background-color: #E36B23;
+                box-shadow: 2px 10px 5px #888;
+
+                font-size: 14px;
+                font-weight: bold;
+                color: #fff;
+
+                text-align: right;
+
+                display: none;
+            }
+        </style>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	</head>
-  <body onload="Tetris.init()">
-    <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-17195095-1']);
-    _gaq.push(['_trackPageview']);
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
+    <body>
+        <audio id="audio_theme" src="music/tetris.mp3" preload="auto"></audio>
+        <audio id="audio_move" src="music/move.mp3" preload="auto"></audio>
+        <audio id="audio_collision" src="music/collision.mp3" preload="auto"></audio>
+        <audio id="audio_gameover" src="music/gameover.mp3" preload="auto"></audio>
+        <audio id="audio_score" src="music/cash.mp3" preload="auto"></audio>
 
-	<div id="menu">
-		<h1>Three.js Tetris</h1>
-    <p>
-      Movement: arrows<br>
-      Rotation: AD/SW/QE<br>
-      Author: <a href="http://www.smashinglabs.pl">smashinglabs.pl</a>
-    </p>
-		<button id="play_button">Play</button>
-	</div>
-  
-	<div id="points">
-		0
-	</div>
-  
-	<audio id="audio_theme" src="music/tetris.mp3" preload="auto"></audio>
-	<audio id="audio_move" src="music/move.mp3" preload="auto"></audio>
-	<audio id="audio_collision" src="music/collision.mp3" preload="auto"></audio>
-	<audio id="audio_gameover" src="music/gameover.mp3" preload="auto"></audio>
-  <audio id="audio_score" src="music/cash.mp3" preload="auto"></audio>
-	
-	<script type="text/javascript" src="js/Three.js"></script>
-	<script type="text/javascript" src="js/Stats.js"></script>
-	<script type="text/javascript" src="js/tetris.js"></script>
-	<script type="text/javascript" src="js/tetris.block.js"></script>	
-	<script type="text/javascript" src="js/tetris.board.js"></script>	
-	
-	<script src="js/cufon-yui.js" type="text/javascript"></script>
-	<script src="js/Blox_400.font.js" type="text/javascript"></script>	
-	
-	<script type="text/javascript">
-		Cufon.replace('#menu h1');
-		Cufon.replace('#points');
-	</script>	
-  </body>
+        <div id="menu">
+            <h1>Three.js Tetris</h1>
+            <p>
+              Movement: arrows<br>
+              Rotation: AD/SW/QE<br>
+              Author: <a href="http://www.smashinglabs.pl">smashinglabs.pl</a>
+            </p>
+            <button id="play_button">Play</button>
+        </div>
+
+        <div id="points">
+            0
+        </div>
+
+        <script type="text/javascript" src="js/Three.js"></script>
+        <script type="text/javascript" src="js/Stats.js"></script>
+        <script type="text/javascript" src="js/tetris.js"></script>
+        <script type="text/javascript" src="js/tetris.board.js"></script>
+        <script type="text/javascript" src="js/tetris.block.js"></script>
+
+        <script src="js/cufon-yui.js" type="text/javascript"></script>
+        <script src="js/Blox_400.font.js" type="text/javascript"></script>
+
+        <script type="text/javascript">
+            Cufon.replace('#menu h1');
+            Cufon.replace('#points');
+        </script>
+    </body>
 </html>
